tests/cases/compiler-development/artifact/errors/diagnostic-c-header-large-tuple-by-value.diagnostic
diagnostic error code=A0001 family=abi message="C header emission for by-value parameter (i64, i64, i64) is limited to direct aggregate ABI values up to 16 bytes and 8-byte alignment; use ptr (i64, i64, i64)" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/ffi/errors/c-header-large-tuple-by-value.ari" display="tests/cases/ffi/errors/c-header-large-tuple-by-value.ari" bytes=117
  Label index=0 role=primary source_id=0 source="tests/cases/ffi/errors/c-header-large-tuple-by-value.ari" line=2 column=8 end_line=2 end_column=18 byte_start=33 byte_end=43 message=""
  Snippet label=0 text="  --> tests/cases/ffi/errors/c-header-large-tuple-by-value.ari:2:8\n   |\n 2 | pub fn take_tuple(value: (i64, i64, i64)) -> i64 {\n   |        ^^^^^^^^^^"
  Note index=0 location=none message="this aggregate exceeds Ari's direct C header aggregate ABI subset. Ari computed this aggregate as 24 bytes with 8-byte alignment."
  Help index=0 location=none message="pass ptr (i64, i64, i64) or expose a smaller C wrapper type at the exported ABI boundary"
